--- a/views/index.html
+++ b/views/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Auto</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="startpagestyle.css">
     <script src="script.js"></script>
 </head>
 <body>
+    <div id="box">
     <form action="/" method="post">
         <input type="email" name="email">
-        <input type="password" name="passwd">
-        <input type="submit" value="Submit">
+        <input type="date" name="date"  id="date"><br>
+        <input type="password" name="passwd"><br>
+        <input type="submit" value="Start" id="button">
+    </div>
     </form>
+
 </body>
 </html>
