--- a/views/index.html
+++ b/views/index.html
@@ -7,14 +7,13 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="box">
-    <form action="/" method="post">
-        <input type="email" name="email">
-        <input type="date" name="date"  id="date"><br>
-        <input type="password" name="passwd"><br>
+<img src="logo2.png">
+    <form action="/" method="post" id="box">
+        <input type="email" name="email" placeholder="E-mail"><br><br>
+        <input type="password" name="passwd" placeholder="Password" ><br><br>
+        <input type="date" name="date"  id="date"><br><br>
         <input type="submit" value="Start" id="button">
-    </div>
     </form>
-
+    <progress id="file" value="50" max="100"> 50% </progress>
 </body>
 </html>
