--- a/views/startpagestyle.css
+++ b/views/startpagestyle.css
@@ -1,25 +1,31 @@
-input:not(#date, #button){
-    width: 250px;
-    margin: 10px;
-}
-button{
-    
+body{
+    vertical-align: middle;
+    background: rgb(197, 197, 197);
+    margin-top: 5%;
+ margin-left: 30%;
+ margin-right: 10%;
 }
 #box{
-    border-radius: 10px;
-    width: 50%;
-    background-color: blue;
-    position: relative;
+    border-radius: 2px;
     padding: 2%;
+    background-color: rgb(224, 224, 224);
+    width: 60%;
 }
-
-
-body{
-    padding-left: 25%;
-    padding-top: 25%;
-    background-color: blueviolet;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    color: #666666;
+input:not(#button, #date){
+    width: 80%;
+    margin: 1%;
+     font-size: 150%;
 }
+#button, #date{
+    margin: 1%;
+    font-size: 200%; 
+    max-width: 40%;
+}
+img{
+    height: 20%;
+    width: 20%;
+}
+#file{
+    width: 62%;
+    margin: 1%;
+   }
