--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Auto</title>
     <link rel="stylesheet" href="startpagestyle.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 <img src="logo2.png">
