First draft fo probably finished product

--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <img src="logo2.png">
-    <form action="/" method="post" id="box">
+    <form action="/" method="post" id="main-form">
         <input type="email" name="email" placeholder="E-mail"><br><br>
         <input type="password" name="passwd" placeholder="Password" ><br><br>
         <input type="date" name="date"  id="date"><br><br>
         <input type="submit" value="Start" id="button">
     </form>
-    <progress id="file" value="50" max="100"> 50% </progress>
+    <progress id="prog" value="0" max="100"></progress>
 </body>
 </html>
