--- a/public/startpagestyle.css
+++ b/public/startpagestyle.css
@@ -2,10 +2,10 @@ body{
     vertical-align: middle;
     background: rgb(197, 197, 197);
     margin-top: 5%;
- margin-left: 30%;
- margin-right: 10%;
+    margin-left: 30%;
+    margin-right: 10%;
 }
-#box{
+#main-form{
     border-radius: 2px;
     padding: 2%;
     background-color: rgb(224, 224, 224);
@@ -14,18 +14,19 @@ body{
 input:not(#button, #date){
     width: 80%;
     margin: 1%;
-     font-size: 150%;
+    font-size: 100%;
 }
 #button, #date{
     margin: 1%;
-    font-size: 200%; 
+    font-size: 100%; 
     max-width: 40%;
 }
 img{
     height: 20%;
     width: 20%;
 }
-#file{
+#prog{
+    visibility: hidden;
     width: 62%;
     margin: 1%;
-   }
+}
